<resources>
    <string name="app_name">Uber_Android_firebase</string>
    <string name="title_activity_maps">Map</string>
    <string name="titulo_cadastro">Cadastrar uma conta</string>
    <string name="titulo_login">Acessar minha conta</string>

    <string name="Digite_email">Digite seu Email</string>
    <string name="digite_senha">Digite sua Senha</string>
    <string name="digite_nome">Digite seu Nome</string>

    <string name="txtPassageiro">Passageiro</string>
    <string name="txtMotorista">Motorista</string>

    <string name="btnEntrar">Entrar</string>
    <string name="btnCadastrar">Cadastrar</string>

    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_passageiro">PassageiroActivity</string>
    <string name="title_activity_corrida">CorridaActivity</string>
</resources>